# cmake_template

./: CMakeLists.txt  rakefile.rb
src/: CMakeLists.txt  main.cpp
